gradiant-color-generate

--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
+<!--Mindula Dilthushan
+Generate-Radiant-Color-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Generate Radian Color</title>
+
+    <!--Import StyleSheets-->
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
-<body>
+<body id="radiant_color">
+<div class="content-section">
+    <div class="color-section">
+        <input class="color_01" type="color" name="color_01" value="#0FB9B1">
+        <input class="color_02" type="color" name="color_02" value="#84FFF9">
+    </div>
+    <h2 class="code-text">Generate Radiant Color Code</h2>
+    <p id="generate_color_code" class="code-text-p"></p>
+</div>
+
+<div class="footer-section">
+    <p class="footer-text">Made with Mindula Dilthushan &nbsp&nbsp ^_~ </p>
+</div>
+
+<!--Scripts-->
+<script src="js/mainFunctions.js"></script>
 
 </body>
 </html>
