--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ Generate-Radiant-Color-->
 </div>
 
 <!--Scripts-->
+<script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/mainFunctions.js"></script>
 
 </body>
