--- a/index.html
+++ b/index.html
@@ -18,7 +18,23 @@ Generate-Radiant-Color-->
     </div>
     <h2 class="code-text">Generate Radiant Color Code</h2>
     <p id="generate_color_code" class="code-text-p"></p>
+
+    <button onclick="myFunction()" class="btn-copy">Copy Code</button>
+
+    <div class="copy-code-section">
+
+        <div class="copied-data" id="yes_copy" style="display: none">
+            <p class="text-code">Your Radiant Color Code Copied ! ✅</p>
+        </div>
+
+        <div class="copied-data-no" id="no_copy" style="display: none">
+            <p class="text-code">Your Radiant Color Code Does Not Copied ! ❌</p>
+        </div>
+
+    </div>
+
 </div>
+
 
 <div class="footer-section">
     <p class="footer-text">Made with Mindula Dilthushan &nbsp&nbsp ^_~ </p>
@@ -27,6 +43,5 @@ Generate-Radiant-Color-->
 <!--Scripts-->
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/mainFunctions.js"></script>
-
 </body>
 </html>
